...
            onPress={() => {
              Share.share({
                message: depositAddress,
                title: `My ${displaySymbol} Address`,
              });
            }}
            text="Share"
          />
        </View>
      </View>
    </View>
  );
};
...
