...
                                symbol: tokenSymbol,
                              },
                            });
                          }}
                        >
                          <SvgIcon
                            name="QRIcon"
                            width="26"
                            height="26"
                            color="pink"
                          />
                        </TouchableOpacity>
                      </View>
...
